Switch button functionality added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
     <div class="switch">
       <p>Annually</p>
-      <div class="switch--Button"></div>
+      <div class="switch--Button">
+        <div class="ball"></div>
+      </div>
       <p>Monthly</p>
     </div>
     <!--    Basic &dollar;19.99 &dollar;199.99 500 GB
@@ -33,5 +35,6 @@
     &dollar;24.99 &dollar;249.99 1 TB Storage 5 Users Allowed Send up to 10 GB
     Learn More Master &dollar;39.99 &dollar;399.99 2 TB Storage 10 Users Allowed
     Send up to 20 GB Learn More -->
+    <script src="./script.js"></script>
   </body>
 </html>
