--- a/index.html
+++ b/index.html
@@ -30,6 +30,60 @@
       </div>
       <p>Monthly</p>
     </div>
+
+    <div class="cards">
+      <div class="card1">
+        <p class="topText">Basic</p>
+        <div class="priceContainer">
+          <span>$</span>
+          <h1 class="price">20.99</h1>
+        </div>
+
+        <div class="line"></div>
+        <p class="topText">500 GB Storage</p>
+        <div class="line"></div>
+        <p class="topText">2 Users Allowed</p>
+        <div class="line"></div>
+        <p class="topText">Send up to 3 GB</p>
+        <div class="line"></div>
+
+        <button href="#">LEARN MORE</button>
+      </div>
+
+      <div class="card__blue">
+        <p class="topText">Professional</p>
+        <div class="priceContainer">
+          <span>$</span>
+          <h1 class="price">20.99</h1>
+        </div>
+        <div class="line"></div>
+        <p class="topText">1 TB Storage</p>
+        <div class="line"></div>
+        <p class="topText">5 Users Allowed</p>
+        <div class="line"></div>
+        <p class="topText">Send up to 10 GB</p>
+        <div class="line"></div>
+
+        <button href="#">LEARN MORE</button>
+      </div>
+
+      <div class="card2">
+        <p class="topText">Master</p>
+        <div class="priceContainer">
+          <span>$</span>
+          <h1 class="price">20.99</h1>
+        </div>
+        <div class="line"></div>
+        <p class="topText">2 TB Storage</p>
+        <div class="line"></div>
+        <p class="topText">10 Users Allowed</p>
+        <div class="line"></div>
+        <p class="topText">Send up to 20 GB</p>
+        <div class="line"></div>
+
+        <button href="#">LEARN MORE</button>
+      </div>
+    </div>
     <!--    Basic &dollar;19.99 &dollar;199.99 500 GB
     Storage 2 Users Allowed Send up to 3 GB Learn More Professional
     &dollar;24.99 &dollar;249.99 1 TB Storage 5 Users Allowed Send up to 10 GB
