Added dynmic data

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p class="topText">Basic</p>
         <div class="priceContainer">
           <span>$</span>
-          <h1 class="price">20.99</h1>
+          <h1 class="price1">199.99</h1>
         </div>
 
         <div class="line"></div>
@@ -54,7 +54,7 @@
         <p class="topText">Professional</p>
         <div class="priceContainer">
           <span>$</span>
-          <h1 class="price">20.99</h1>
+          <h1 class="price2">249.99</h1>
         </div>
         <div class="line"></div>
         <p class="topText">1 TB Storage</p>
@@ -71,7 +71,7 @@
         <p class="topText">Master</p>
         <div class="priceContainer">
           <span>$</span>
-          <h1 class="price">20.99</h1>
+          <h1 class="price3">399.99</h1>
         </div>
         <div class="line"></div>
         <p class="topText">2 TB Storage</p>
