--- a/index.html
+++ b/index.html
@@ -81,14 +81,9 @@
         <p class="topText">Send up to 20 GB</p>
         <div class="line"></div>
 
-        <button href="#">LEARN MORE</button>
+        <button>LEARN MORE</button>
       </div>
     </div>
-    <!--    Basic &dollar;19.99 &dollar;199.99 500 GB
-    Storage 2 Users Allowed Send up to 3 GB Learn More Professional
-    &dollar;24.99 &dollar;249.99 1 TB Storage 5 Users Allowed Send up to 10 GB
-    Learn More Master &dollar;39.99 &dollar;399.99 2 TB Storage 10 Users Allowed
-    Send up to 20 GB Learn More -->
     <script src="./script.js"></script>
   </body>
 </html>
