--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p class="topText">Send up to 3 GB</p>
         <div class="line"></div>
 
-        <button href="#">LEARN MORE</button>
+        <button>LEARN MORE</button>
       </div>
 
       <div class="card__blue">
@@ -64,7 +64,7 @@
         <p class="topText">Send up to 10 GB</p>
         <div class="line"></div>
 
-        <button href="#">LEARN MORE</button>
+        <button>LEARN MORE</button>
       </div>
 
       <div class="card2">
